Fixed Texas and Hawaii being clipped at the bottom.

--- a/d3map/assets/css/main.css
+++ b/d3map/assets/css/main.css
@@ -5248,7 +5248,7 @@ button:hover,
     display: inline-block;
     position: relative;
     width: 100%;
-    padding-bottom: 50%; /* aspect ratio */
+    padding-bottom: 60%; /* aspect ratio */
     vertical-align: top;
     overflow: hidden;
 }
